--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
    <h1>Hello World!!!</h1>
-   <script src="js/script.js"></script>
+   <script src=".//script.js"></script>
 </body>
 
 </html>
